# AI_news

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  rss_fetcher.py  run.py
alembic/: env.py
api/: db.py  main.py  middleware.py  scheduler.py
config/: __init__.py  settings.py
docker/: entrypoint.sh
docs/: README.md  execution-plan-week1-4.md
fetchers/: __init__.py  anomaly_detector.py  db.py  dragon_tiger.py  financials.py  integrity_checker.py  intraday.py  main_money_flow.py  margin_trading.py  north_money.py  proxy_pool.py  research_report.py  trading_calendar.py  valuation.py
frontend/: .dockerignore  .eslintrc.json  Dockerfile  next.config.mjs  package-lock.json  package.json
scripts/: backup.sh  check_docs.py  compute_industry_valuation.py  fetch_advanced_data.py  fetch_all_stocks.py  fetch_dragon_tiger.py  fetch_financials.py  fetch_financials_fast.py  fetch_history.py  fetch_main_money.py  fetch_margin.py  fetch_north_money.py  fetch_valuation.py  full_stock_analysis.py  migrate_sqlite_to_pg.py  rps_screener.py  update_all_data.py  verify_migration.py
src/: __init__.py  exceptions.py  logging.py
tests/: __init__.py  test_akshare_producers.py  test_analysis.py  test_api.py  test_api_auth.py  test_api_endpoints.py  test_api_middleware.py  test_api_schemas.py  test_backtest_engine.py  test_backtest_metrics.py  test_config.py  test_connection.py  test_core.py  test_database_connection.py  test_database_engine.py  test_error_handling.py  test_exceptions.py  (+35 more)
(+204 files in other folders)
