[project]
name = "ai_news"
version = "1.0.0"
description = "A股全维度数据系统 - Tushare 数据源 + AI 分析"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "tinyshare>=0.1.0",
    "akshare>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "feedparser>=6.0.0",
    "apscheduler>=3.10.0",
    "markdown>=3.6",
    "bleach>=6.1.0",
    "structlog>=24.1.0",
    "google-genai>=1.0.0",
    "py-clob-client>=0.34.0",
    "deep-translator>=1.11.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
